# quat1024.github.io

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  deno.json  discord.html  error.css  feed.xml  index.html  new.md  package-lock.json  package.json  photos.md  posts.html  rotator.css  rustfmt.toml  style.css  stylin.css  tags.html
.github/workflows/: do the thing.yml  static.yml
discord/: index.html
gravity/: build.ts  deno.json  gravity.ts
in/: discord.md  landing.md
in/photos/: photodb.json
in/posts/: command_line.md  december_adventure.md  december_adventure_1.md  digital_gardens.md  eighteen_notes.md  enum_reflection.md  fabric_datagens.md  fix_it.md  football.md  good_enough_bundling.md  great_job_gruber.md  (+20 more)
posts/: fabric_datagens.html  good_title_for_my_puzzle_game.html  how_2_angry_lex.html  index.html  intellij_fix_it.html  obligatory_haha_new_website.html  one_point_seventeen_notes.html  playing_portal_2.html  unable_to_get_windows_mutable_environment_variable_map.html  we_out_here_reloadin.html  what_the_hell_is_a_build_system.html
src/: date.rs  date.ts  document.rs  index.ts  jsx.ts  main.rs  markdown.rs  photos.tsx  photos_add.ts  post.ts  post_db.rs  pushline.rs  tags.ts  templates.tsx  util.ts
src-js/: index.mjs  index.ts  jsxtest.tsx  jsxtest2.ts  markdown.mjs  markdown.ts  post.mjs  post.ts  tags.mjs  tags.ts  templates.mjs  templates.ts  templates.tsx
tags/: 1.12.html  1.14.html  1.16.html  1.17.html  design.html  fabric.html  forge.html  games.html  index.html  java.html  mc-modding.html  portal2.html  rust.html
(+39 files in other folders)
