[package]
name = "quatweb-static"
version = "0.1.0"
authors = ["quat1024 <quat1024@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
chrono = "0.4.19"
pulldown-cmark = "0.8.0"
